--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <!-- <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e64b3727e862b06"></script> -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145482737-6"></script>
+<!--     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145482737-6"></script> -->
     <script>
         window.dataLayer = window.dataLayer || [];
 
