--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
     </section>
     <h3 class="pb-2 d-flex justify-content-center">성별을 선택하세요</h3>
-    <h4>이 사이트는 <a href = "https://github.com/youtube-jocoding/animalface">이 코드</a>를 사용했습니다</h4>
+    <h4 class="pb-2 d-flex justify-content-center">이 사이트는 <a href = "https://github.com/youtube-jocoding/animalface">이 코드</a>를 사용했습니다</h4>
     <section class="d-flex justify-content-center">
         <p class="d-flex align-items-center pr-3">여자</p>
         <div>
