--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <footer class="footer pt-5 container d-flex justify-content-center">
         <div>
             <p>&copy; 조코딩 JoCoding 2020. All Rights Reserved. </p>
-            <h4 class="pb-2 d-flex justify-content-center"  style="font-size: 13px;">이 사이트는 <a href = "https://github.com/youtube-jocoding/animalface"> 이 코드</a>를 사용해 제작되었습니다</h4>
+            <h4 class="pb-2 d-flex justify-content-center"  style="font-size: 13px;"><a href = "https://github.com/youtube-jocoding/animalface"> 이 코드</a>를 사용해 제작되었습니다</h4>
 
 <!--            
         <ul class="list-inline d-flex justify-content-center">
