--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@
     <div class="modal fade" id="adModal" tabindex="-1" role="dialog" aria-labelledby="adModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <div class="modal-header">
+<!--                 <div class="modal-header">
                     <h5 class="modal-title" id="adModalLabel">(AD)광고 - 재시도를 한번 더 눌러주세요.</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                </div>
+                </div> -->
                 <div class="modal-body d-flex justify-content-center">
                     <ins class="kakao_ad_area" style="display:none;" 
  data-ad-unit    = "DAN-t89oh3sc0ew5" 
