--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     </div> -->
     <footer class="footer pt-5 container d-flex justify-content-center">
         <div>
-            <p>&copy; 조코딩 JoCoding 2020. All Rights Reserved. </p>
+            
             <h4 class="pb-2 d-flex justify-content-center"  style="font-size: 13px;"><a href = "https://github.com/youtube-jocoding/animalface"> 이 코드</a>를 사용해 제작되었습니다</h4>
 
 <!--            
@@ -342,7 +342,7 @@
                         gtag('event', '여자 결과 사슴상', {'event_category': '여자 결과'});
                         break;
                     case "fox":
-                        resultTitle = "섹시한 밀당고수 여우상"
+                        resultTitle = "밀당고수 여우상"
                         resultExplain = "사람을 홀리는 매력을 가진 당신은 선뜻 다가가기 힘든 섹시한 매력을 가졌다. 우아한 외모에 더해 뛰어난 센스의 성격을 가진 당신은 어딜가도 주목받는 주인공이다! 사교적인 성격을 가져 연인에게도 적극적으로 애정표현을 하지만 밀당의 고수인 당신은 연인의 혼을 쏙 빼놓는 매력쟁이다."
                         resultCeleb = "여우상 연예인: 경리(나인뮤지스), 예지(있지), 한혜진(모델), 헤이즈, 지연(티아라)"
                         gtag('event', '여자 결과 여우상', {'event_category': '여자 결과'});
